horizontal Scroll fix

--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,17 @@
     --background: #010326;
 }
 
+html,
+body {
+    overflow-x: hidden;
+    max-width: 100%;
+}
 
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     scroll-behavior: smooth;
 }
 
@@ -41,13 +46,11 @@ body {
 
     color: #fff;
     padding: 0 10%;
-    position: relative;
+
 
 }
 
-.App {
-    position: relative;
-}
+
 
 .loader {
 
@@ -59,7 +62,7 @@ body {
 }
 
 @media screen and (min-width: 768px) and (max-width: 2000px) {
-    ::-webkit-scrollbar {
+    /* ::-webkit-scrollbar {
         width: 15px;
     }
 
@@ -81,7 +84,7 @@ body {
     ::-webkit-scrollbar-thumb:hover {
         background-color: var(--primary);
         cursor: pointer;
-    }
+    } */
 }
 
 @media screen and (max-width: 768px) {
