--- a/src/components/FAQ/Faq.css
+++ b/src/components/FAQ/Faq.css
@@ -5,7 +5,7 @@
     justify-content: flex-start;
     flex-direction: column;
     width: 100%;
-    background: linear-gradient(#11143498, #1114349a), url('../../assets/faq.png');
+    background: radial-gradient(#1f226286, #03073b9a), url('../../assets/faq.png');
     background-repeat: no-repeat;
     background-position: center;
 }
